adopting new example structure, made all example run fix #77, switch to polyflow 3.9.0
